--- a/src/blocks/sign-form/__question/sign-form__question.css
+++ b/src/blocks/sign-form/__question/sign-form__question.css
@@ -1,6 +1,6 @@
 .sign-form__question{
   padding: 0;
-  margin: 0;
+  margin: 15px 0 0 0; 
   font-size: 14px;
   line-height: 17px;
   text-align: center;
