--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__container/header__container.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__sign-link/header__page-link.css);
+@import url(./blocks/header/__exit-btn/header__exit-btn.css);
 
 @import url(./blocks/content/content.css);
 
