--- a/src/blocks/header/__container/header__container.css
+++ b/src/blocks/header/__container/header__container.css
@@ -1,6 +1,14 @@
 .header__container {
   display: flex;
   align-items: flex-end;
+  justify-content: center;
   gap: 24px;
   margin: 0 0 46px 0;
+  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 500px) {
+  .header__container {
+    gap: 40px;
+  }
 }
