--- a/src/blocks/header/__email/header__email.css
+++ b/src/blocks/header/__email/header__email.css
@@ -1,8 +1,14 @@
 .header__email {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 25px;
   font-weight: 500;
   font-size: 18px;
   line-height: 22px;
   text-align: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header__email {
+    text-align: center;
+  }
 }
