--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap-reverse;
   padding: 45px 0 0;
   width: 100%;
   max-width: 880px;
@@ -14,6 +15,12 @@
     max-width: calc(100% * (282 / 320));
     padding: 28px 0 0;
     min-height: 56px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .header {
+    justify-content: center;
   }
 }
 
